--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "bulma": "^0.7.5",
+    "bulmaswatch": "^0.7.4-1",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
