--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "bcrypt": "^3.0.6",
@@ -24,11 +27,14 @@
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mapbox-gl": "^1.2.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.6.8",
     "mongoose-unique-validator": "^2.0.3",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-mapbox-gl": "^4.6.0",
     "react-router-dom": "^5.0.1",
     "react-toastify": "^5.3.2",
     "sass-loader": "^7.2.0",
