--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "serve": "nodemon",
     "serve:backend": "nodemon",
     "serve:frontend": "webpack-dev-server --mode development",
-    "test": "mocha test/**/*_spec.js --require test/helper --recursive --exit"
+    "test": "mocha test/**/*_spec.js --require test/helper --recursive --exit",
+    "start": "yarn build && node index"
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
