--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "license": "MIT",
   "scripts": {
     "seed": "node db/seeds.js",
-    "serve": "nodemon",
     "serve:backend": "nodemon",
     "serve:frontend": "webpack-dev-server --mode development",
     "test": "mocha test/**/*_spec.js --require test/helper --recursive --exit",
-    "start": "yarn build && node index"
+    "start": "yarn build && node index",
+    "build": "webpack -p"
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
