--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bulma": "^0.7.5",
     "bulmaswatch": "^0.7.4-1",
     "css-loader": "^3.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
