--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mapbox-gl": "^1.2.1",
     "moment": "^2.24.0",
     "mongoose": "^5.6.8",
