--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "bulma": "^0.7.5",
     "bulmaswatch": "^0.7.4-1",
     "css-loader": "^3.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mapbox-gl": "^1.2.1",
     "moment": "^2.24.0",
     "mongoose": "^5.6.8",
@@ -37,6 +39,7 @@
     "react-dom": "^16.9.0",
     "react-mapbox-gl": "^4.6.0",
     "react-router-dom": "^5.0.1",
+    "react-select": "^3.0.4",
     "react-toastify": "^5.3.2",
     "sass-loader": "^7.2.0",
     "style-loader": "^1.0.0",
