--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-lazy-hero": "^2.0.0",
     "react-mapbox-gl": "^4.6.0",
+    "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.0.1",
     "react-select": "^3.0.4",
     "react-toastify": "^5.3.2",
     "sass-loader": "^7.2.0",
     "style-loader": "^1.0.0",
+    "styled-components": "^4.3.2",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0"
