--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-datepicker": "^2.8.0",
     "react-dom": "^16.9.0",
     "react-lazy-hero": "^2.0.0",
     "react-mapbox-gl": "^4.6.0",
