--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bulma-carousel": "^4.0.4",
     "bulmaswatch": "^0.7.4-1",
     "css-loader": "^3.2.0",
+    "eslint-utils": "^1.4.2",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
